<package format="2">
  <name>people_velocity_tracker</name>
  <version>1.2.2</version>
  <description>Track the output of the leg_detector to indicate the velocity of person.</description>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/people_velocity_tracker</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>easy_markers</depend>
  <depend>geometry_msgs</depend>
  <depend>kalman_filter</depend>
  <depend>people_msgs</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <!-- Temporarily removed exec_depend>leg_detector</exec_depend-->
  <test_depend>roslint</test_depend>
</package>
